--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/ssr": "^0.7.0",
+    "@types/three": "^0.180.0",
     "@uiw/react-codemirror": "^4.25.2",
     "ai": "^5.0.56",
     "class-variance-authority": "^0.7.1",
@@ -30,7 +31,9 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.180.0",
+    "three-forcegraph": "^1.43.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
